devscripts (2.12.6+deb7u2) stable-security; urgency=high

  * uscan: Repack the tarball and verify it is a compressed archive without
    allowing arbitrary code execution.  Fixes CVE-2013-6888.

 -- James McCoy <jamessan@debian.org>  Mon, 16 Dec 2013 23:19:38 -0500

devscripts (2.12.6+deb7u1) stable; urgency=low

  * Fix build-rdeps to work with Wheezy being stable (Closes: #695975)

 -- Moritz Muehlenhoff <jmm@debian.org>  Fri, 04 Oct 2013 18:48:12 +0000

devscripts (2.12.6) unstable; urgency=low

  * Actual install German translation.

 -- Benjamin Drung <bdrung@debian.org>  Sun, 25 Nov 2012 00:30:00 +0100

devscripts (2.12.5) unstable; urgency=low

  [ James McCoy ]
  * bts:
    + Provide a clearer error message when Authen::SASL isn't installed.
      (Closes: #689816)
    + Don't require a usertag after 'bts usertag <bug> ='.  (Closes: #689815)
    + Don't require a package after 'bts affects <bug> ='.  (Closes: #690131)
  * Add German translation of man pages.  Thanks to Chris Leick.  (Closes:
    #687985)

  [ Benjamin Drung ]
  * Fix Subversion typo and write all instances of it with an capital initial
    letter. Thanks to Regid Ichira for the finding. (Closes: #689953)
  * debuild:
    - Fix failure if called with --preserve-env and GREP_OPTIONS is set.
      Thanks to Aaron Culich for the patch.  (Closes: #501056, LP: #581319)
    - Add missing bits to support dpkg-genchanges hook.
      Thanks to Maciej Malycha for the patch. (LP: #1065201)
  * wrap-and-sort: Sort Pre-Depends list (LP: #1070599)

  [ David Prévot ]
  * French translation update.

 -- Benjamin Drung <bdrung@debian.org>  Wed, 24 Oct 2012 22:15:34 +0200

devscripts (2.12.4) unstable; urgency=low

  [ James McCoy ]
  * dget: Avoid an infinite loop when a .changes/.dsc file references itself.
    (Closes: #687670)
  * debdiff:
    + Set $TMPDIR when running interdiff so its temp files get cleaned up on
      exit.
    + Fallback to manual diff of source package if interdiff fails.  (Closes: